<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createCarServiceBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">>

        <TextView
            android:id="@+id/choose_new_service_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/choose_new_service_textText"
            android:textColor="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createCarRentalServiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="carRental"
            android:text="@string/createCarRentalServiceBtnText" />

        <Button
            android:id="@+id/createTruckRentalServiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="truckRental"
            android:text="@string/createTruckRentalServiceBtnText" />

        <Button
            android:id="@+id/createMovingAssitanceServiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="movingAssistance"
            android:text="@string/createMovingAssitanceServiceBtnText" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>